--- a/index.html
+++ b/index.html
@@ -332,12 +332,12 @@
               >
                 Github
               </button>
-              <!-- <button
+              <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='museumofcandy.ranjeetsingh.online'"
               >
                 Live Demo
-              </button> -->
+              </button>
             </div>
           </div>
         </div>
