modification in index file

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='museumofcandy.ranjeetsingh.online'"
+                onclick="location.href='https://museumofcandy.ranjeetsingh.online'"
               >
                 Live Demo
               </button>
