added link for project two

--- a/index.html
+++ b/index.html
@@ -308,12 +308,12 @@
               >
                 Github
               </button>
-              <!-- <button
+              <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/ranjeetxsingh/yelpcamp'"
+                onclick="location.href='https://tame-puce-buffalo-toga.cyclic.app/'"
               >
                 Live Demo
-              </button> -->
+              </button>
             </div>
           </div>
           <div class="details-container color-container">
